--- a/index.html
+++ b/index.html
@@ -1,97 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DashboardEx</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/9d8576016b.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Contaminación</title>
 </head>
 
 <body>
-    <div class="container">
-        <!-- Side Navbar -->
-        <div class="sidebar">
-            <div class="logo">
-                <img src="./Assets/Logo DesarrolladorVazzy.png">
-            </div>
-            <p class="side-nav-header">Admin Console</p>
-            <div class="side-nav-elements">
-                <div class="side-nav-element"><i class="material-icons">home</i>Home</div>
-                <div class="side-nav-element"><i class="material-icons">dashboard</i>Dashboard</div>
-                <div class="side-nav-element"><i class="material-icons">bar_chart</i>Reports</div>
-                <div class="side-nav-element"><i class="material-icons">event</i>Forecasting</div>
-                <div class="side-nav-element"><i class="material-icons">drag_handle</i>Limits</div>
-                <div class="side-nav-element"><i class="material-icons">launch</i>Product</div>
-            </div>
-            <p class="side-nav-header">INGRESA NUEVOS DATOS</p>
-            <div class="side-nav-elements">
-                <div class="side-nav-element"><i class="material-icons">credit_card</i>Expenses</div>
-                <div class="side-nav-element"><i class="material-icons">euro_symbol</i>Income</div>
-                <div class="side-nav-element"><i class="material-icons">message</i>Messages</div>
-            </div>
-        </div>
-        <div class="main">
-            <!-- Main Header -->
-            <div class="header">
-                <div class="header-elements">
-                    <i class="header-element material-icons">search</i>
-                    <i class="header-element material-icons">settings</i>
-                    <i class="header-element material-icons">notifications_active</i></div>
-            </div>
 
+  <header>
+          <nav class="navbar">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href=" https://waqi.info">API</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Perfil</a></li>
+              </ul>           
+        </nav>
+  </header>
+  <br>
+   <!--Aqui inicia formato de columnas-->
+   <div class="container-fluid">
+      <h1 class="display-4">Calidad del aire</h1>
+      <p class="lead">Datos</p>
 
-            <!-- Main Dashboard -->
-            <div class="dashboard">
-                <span class="welcome_message">BIENVENIDO <span class="welcome_message_name">Fulanito</span></span>
-                <div class="dashboard-header">
-                    <p>Personal Finance Ejemplo</p>
-                    <div class="select-wrapper">
-                        <select name="datepicker" id="datepicker">
-                            <option value="January 2020">January 2020</option>
-                            <option value="February 2020">February 2020</option>
-                            <option value="March 2020">March 2020</option>
-                            <option value="April 2020">April 2020</option>
-                            <option value="April 2020">May 2020</option>
-                            <option value="April 2020">June 2020</option>
-                            <option value="April 2020">July 2020</option>
-                            <option value="April 2020">August 2020</option>
-                            <option value="April 2020">September 2020</option>
-                            <option value="April 2020">October 2020</option>
-                            <option value="April 2020">November 2020</option>
-                            <option value="April 2020">December 2020</option>
-                        </select>
-                    </div>
+   <button type="button" class="btn btn-success">Actualizar</button>
+  </div>
+<br>
+
+<div class="container">
+    <div class="row">
+       <div class="col-md-4">
+            <h2>Line Chart</h2>
+                <div class="imgcol3">
+                    <canvas id="myChart1" width="400" height="400"></canvas>
                 </div>
-                <div class="dashboard-cards">
-                    <div class="card" id="card-1">
-                        <div class="chart-canvas">
-
-                        </div>
-                    </div>
-                    <div class="card"  id="card-2">
-                        <div class="chart-canvas">
-
-
-
-                        </div>
-                    </div>
-                    <div class="card"  id="card-3">
-                        <div class="chart-canvas">
-
-                        </div>
-                    </div>
-                    <div class="card"  id="card-4">
-                        <div class="chart-canvas">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <br>
+         <!-- <button type="button" class="btn btn-success">Actualizar</button>-->
         </div>
+    
+       <!--  <div class="col-md-4">
+            <h2>Radar Chart</h2>
+                <div class="imgcol3">
+                    <canvas id="myChart2"></canvas>
+                </div>
+                <br>
+                 <button type="button" class="btn btn-success">Actualizar</button>
+        </div>
+        </div>
+    
+         <div class="col-md-4">
+            <h2>Geo Chart</h2>
+                <div class="imgcol3">
+                    <canvas id="myChart3"></canvas>
+                </div>
+                    <button type="button" class="btn btn-success">Comprar</button>
+        </div> -->
     </div>
-    <script src="script.js"></script>
+</div>
+
+<!--Formato de columnas-->
+
+<div class="footer">
+    <button><i class="fa-brands fa-facebook"></i></button>
+    <button><i class="fa-brands fa-twitter"></i></button>
+    <button><i class="fa-brands fa-instagram"></i></button>
+    <small>&copy; 2022 <b>Yenni Vázquez</b> - Derechos reservados</small>
+</div>
+
+<!-- <script type="module">
+   import {data, green} from './app.js'
+    const dataChart = (param) => {
+      const myChart = new Chart(param , {
+        type: 'bar',
+        data: {
+          labels: data.map((item) => item.label),
+          datasets: [
+            {
+            label: "A",
+            data: pink.map((item) => item.value),
+            backgroundColor: 'rgb(255, 99, 132)',
+            },
+            {
+            label: "B",
+            data: [10, 30, 35, 22, 23, 24, 25, 11, 12, 13,150, 160, 170, 180, 14, 15, 16, 17, 18, 19, 20, 21, 10, 70, 80, 90, 100,],
+            backgroundColor: 'rgb(100, 155, 255)',
+            },
+            {
+            label: "C",
+            data: data.map((item) => item.value),
+            backgroundColor: 'rgb(50, 255, 200)',
+            }
+        ]
+        },
+        options: {
+          responsive: true,
+          plugins: {
+            legend: {
+              position: 'top',
+            },
+            title: {
+              display: true,
+              text: 'Ejercicio Asesoria ChartJS'
+            }
+          }
+        }
+      })
+    } 
+    const renderChart = () => {
+      const context = document.getElementById('myChart2').getContext('2d')
+      //Funcion que crea el grafico
+      dataChart(context)
+    }
+    renderChart()
+</script> -->
+
+
+  <script src="./charts.js"></script>
+  <script src="./app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
 </body>
 </html>
