--- a/index.html
+++ b/index.html
@@ -11,37 +11,36 @@
 </head>
 
 <body>
-
   <header>
-          <nav class="navbar">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href=" https://waqi.info">API</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Perfil</a></li>
-              </ul>           
-        </nav>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href=" https://waqi.info">API</a></li>
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Perfil</a></li>
+      </ul>           
+    </nav>
   </header>
+
   <br>
-   <!--Aqui inicia formato de columnas-->
-   <div class="container-fluid">
+   !--Aqui inicia formato de columnas-->
+  <div class="container-fluid">
       <h1 class="display-4">Calidad del aire</h1>
       <p class="lead">Datos</p>
-
-   <button type="button" class="btn btn-success">Actualizar</button>
+    <button type="button" class="btn btn-success">Actualizar</button>
   </div>
-<br>
 
+<br>
 <div class="container">
     <div class="row">
-       <div class="col-md-4">
-            <h2>Line Chart</h2>
-                <div class="imgcol3">
+      <div class="col-md-4">
+          <h2>Line Chart</h2>
+            <div class="imgcol3">
                     <canvas id="myChart1" width="400" height="400"></canvas>
-                </div>
-                <br>
+            </div>
+            <br>
          <!-- <button type="button" class="btn btn-success">Actualizar</button>-->
-        </div>
+      </div>
     
        <!--  <div class="col-md-4">
             <h2>Radar Chart</h2>
@@ -61,7 +60,7 @@
                     <button type="button" class="btn btn-success">Comprar</button>
         </div> -->
     </div>
-</div>
+  </div>
 
 <!--Formato de columnas-->
 
